# Test

./: CMakeCache.txt  CMakeLists.txt  Makefile  WINDOWS_BUILD_SUMMARY.md  build-windows-cross.sh  build-windows.sh  build.sh  cmake_install.cmake  test_windows.cpp  twitter_bot.py  twitter_bot_gui.py  windows_main.cpp
X2Modern_autogen/: moc_predefs.h  mocs_compilation.cpp
X2Modern_autogen/6YEA5652QU/: moc_account_manager.cpp  moc_bot_worker.cpp  moc_database_manager.cpp  moc_settings_manager.cpp  moc_twitter_bot.cpp  moc_twitter_bot_gui.cpp
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/X2Modern_autogen/6YEA5652QU/: moc_api_manager.cpp  moc_log_manager.cpp
build-release/resources/: styles.qss
final-release/: README.md
final-release/documentation/: DEPLOYMENT.md  FEATURES.md  WINDOWS_BUILD.md
final-release/linux-release/: README.md  X2Modern-debug  start.sh
final-release/windows-source/: CMakeLists-windows.txt  build-windows-release.bat  setup-environment.bat
final-release/windows-source/include/: account_manager.h  database_manager.h  twitter_bot.h
include/: database_manager.h  log_manager.h  settings_manager.h  twitter_bot_gui.h
release-package/: RELEASE_INFO.txt  X2Modern
src/: account_manager.cpp  main.cpp  twitter_bot.cpp  twitter_bot_gui.cpp
windows-exe-package/docs/: README.md
windows-exe-package/source/: CMakeLists.txt  build-qt5-gui.bat
windows-exe-package/source/include/: bot_worker.h  constants.h
windows-exe-package/source/src/: api_manager.cpp  bot_worker.cpp  database_manager.cpp  log_manager.cpp  twitter_bot_gui.cpp
windows-release-package/: README.md  build-windows.bat
windows-release-package/include/: api_manager.h
